<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddMemberActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_member_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/add_human_icon_imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toStartOf="@id/guide_vert_25"
        app:layout_constraintTop_toBottomOf="@id/add_member_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/add_given_name_editText"
        android:src="@drawable/ic_perm_identity_24px" />

    <EditText
        android:id="@+id/add_given_name_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/given_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_vert_25"
        app:layout_constraintTop_toBottomOf="@+id/add_member_toolbar" />

    <EditText
        android:id="@+id/add_family_name_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide_vert_25"
        app:layout_constraintTop_toBottomOf="@id/add_given_name_editText"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/add_family_name_hint"/>

    <ImageView
        android:id="@+id/add_member_level_icon_imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_fitness_center_24px"
        app:layout_constraintBottom_toBottomOf="@+id/add_member_level_spinner"
        app:layout_constraintEnd_toStartOf="@id/guide_vert_25"
        app:layout_constraintTop_toTopOf="@+id/add_member_level_spinner" />

    <Spinner
        android:id="@+id/add_member_level_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_family_name_editText"
        app:layout_constraintStart_toEndOf="@id/guide_vert_25"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/add_phone_icon_imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toStartOf="@id/guide_vert_25"
        app:layout_constraintTop_toTopOf="@id/add_phone_editText"
        app:layout_constraintBottom_toBottomOf="@id/add_phone_editText"
        android:src="@drawable/ic_phone_24px" />

    <EditText
        android:id="@+id/add_phone_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_phone_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_vert_25"
        app:layout_constraintTop_toBottomOf="@id/add_member_level_spinner" />

    <ImageView
        android:id="@+id/add_email_icon_imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_email_24px"
        app:layout_constraintBottom_toBottomOf="@+id/add_email_editText"
        app:layout_constraintEnd_toStartOf="@id/guide_vert_25"
        app:layout_constraintTop_toTopOf="@+id/add_email_editText" />

    <EditText
        android:id="@+id/add_email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_vert_25"
        app:layout_constraintTop_toBottomOf="@id/add_phone_editText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_vert_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

</androidx.constraintlayout.widget.ConstraintLayout>